--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,52 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+attrs==25.3.0
 Brotli==1.1.0
+CacheControl==0.14.3
+cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+cryptography==44.0.3
 cssselect2==0.8.0
+deprecation==2.1.0
 distro==1.9.0
 dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
+firebase-admin==6.8.0
 fonttools==4.57.0
+frozenlist==1.6.0
+google-api-core==2.24.2
+google-api-python-client==2.169.0
+google-auth==2.40.1
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.3
+google-cloud-firestore==2.20.2
+google-cloud-storage==3.1.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+gotrue==2.12.0
 greenlet==3.2.0
 groq==0.22.0
+grpcio==1.71.0
+grpcio-status==1.71.0
 h11==0.14.0
+h2==4.2.0
+hpack==4.1.0
 httpcore==1.0.8
+httplib2==0.22.0
 httptools==0.6.4
 httpx==0.28.1
+hyperframe==6.1.0
 idna==3.10
+iniconfig==2.1.0
 Jinja2==3.1.6
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -31,41 +59,64 @@ Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+msgpack==1.1.0
+multidict==6.4.3
 orjson==3.10.16
 packaging==24.2
 pdfkit==1.0.0
 pillow==11.2.1
+pluggy==1.5.0
+postgrest==1.0.1
+propcache==0.3.1
+proto-plus==1.26.1
+protobuf==5.29.4
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
 pydyf==0.11.0
 Pygments==2.19.1
+PyJWT==2.10.1
 PyMuPDF==1.25.5
 pymupdf4llm==0.0.21
+pyparsing==3.2.3
 pyphen==0.17.2
+pytest==8.3.5
+pytest-mock==3.14.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
+realtime==2.4.3
 requests==2.32.3
 requests-toolbelt==1.0.0
 rich==14.0.0
 rich-toolkit==0.14.1
+rsa==4.9.1
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.40
 starlette==0.46.2
+storage3==0.11.3
+StrEnum==0.4.15
+supabase==2.15.1
+supafunc==0.9.4
 tenacity==9.1.2
 tinycss2==1.4.0
 tinyhtml5==2.0.0
 typer==0.15.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+uritemplate==4.1.1
 urllib3==2.4.0
 uvicorn==0.34.1
 uvloop==0.21.0
 watchfiles==1.0.5
 weasyprint==65.1
 webencodings==0.5.1
-websockets==15.0.1
+websockets==14.2
+yarl==1.20.0
 zopfli==0.2.3.post1
 zstandard==0.23.0
