--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.11.18
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+asttokens==3.0.0
 attrs==25.3.0
 Brotli==1.1.0
 CacheControl==0.14.3
@@ -11,12 +12,16 @@ certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+comm==0.2.2
 cryptography==44.0.3
 cssselect2==0.8.0
+debugpy==1.8.14
+decorator==5.2.1
 deprecation==2.1.0
 distro==1.9.0
 dnspython==2.7.0
 email_validator==2.2.0
+executing==2.2.0
 fastapi==0.115.12
 fastapi-cli==0.0.7
 firebase-admin==6.8.0
@@ -47,9 +52,15 @@ httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
 iniconfig==2.1.0
+ipykernel==6.29.5
+ipython==9.3.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
 Jinja2==3.1.6
 jsonpatch==1.33
 jsonpointer==3.0.0
+jupyter_client==8.6.3
+jupyter_core==5.8.1
 langchain==0.3.23
 langchain-core==0.3.54
 langchain-groq==0.3.2
@@ -58,18 +69,27 @@ langsmith==0.3.32
 Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 msgpack==1.1.0
 multidict==6.4.3
+nest-asyncio==1.6.0
 orjson==3.10.16
 packaging==24.2
+parso==0.8.4
 pdfkit==1.0.0
+pexpect==4.9.0
 pillow==11.2.1
+platformdirs==4.3.8
 pluggy==1.5.0
 postgrest==1.0.1
+prompt_toolkit==3.0.51
 propcache==0.3.1
 proto-plus==1.26.1
 protobuf==5.29.4
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
@@ -78,7 +98,7 @@ pydantic_core==2.33.1
 pydyf==0.11.0
 Pygments==2.19.1
 PyJWT==2.10.1
-PyMuPDF==1.25.5
+PyMuPDF==1.25.3
 pymupdf4llm==0.0.21
 pyparsing==3.2.3
 pyphen==0.17.2
@@ -88,6 +108,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
+pyzmq==26.4.0
 realtime==2.4.3
 requests==2.32.3
 requests-toolbelt==1.0.0
@@ -98,6 +119,7 @@ shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.40
+stack-data==0.6.3
 starlette==0.46.2
 storage3==0.11.3
 StrEnum==0.4.15
@@ -106,6 +128,8 @@ supafunc==0.9.4
 tenacity==9.1.2
 tinycss2==1.4.0
 tinyhtml5==2.0.0
+tornado==6.5.1
+traitlets==5.14.3
 typer==0.15.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
@@ -114,6 +138,7 @@ urllib3==2.4.0
 uvicorn==0.34.1
 uvloop==0.21.0
 watchfiles==1.0.5
+wcwidth==0.2.13
 weasyprint==65.1
 webencodings==0.5.1
 websockets==14.2
